--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,12 +42,19 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Python build tools
-      run: python -m pip install tox wheel
+      run: python -m pip install hatch wheel
     - name: Run tests
-      run: python -m tox run -e py
+      if: startsWith(matrix.python-version, 'pypy') != true
+      run: hatch test -i python=${{ matrix.python-version }}
+    - name: Run tests (pypy)
+      if: startsWith(matrix.python-version, 'pypy') == true
+      run: |
+        PYTHONENV=${{ matrix.python-version }}
+        PYTHONENV=${PYTHONENV//-} # replace all dashes
+        hatch test -i python=${PYTHONENV}
     - name: Install Scipy prerequisites for Ubuntu
       if: startsWith(matrix.platform, 'ubuntu')
       run: sudo apt-get install libopenblas-dev
     - name: Run tests with scipy
       if: startsWith(matrix.platform, 'ubuntu') || startsWith(matrix.python-version, 'pypy') != true
-      run: python -m tox run -e py-scipy
+      run: hatch test -i python=${{ matrix.python-version }} -i feature=scipy
