--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,9 +4,9 @@ on:
   pull_request:
     branches:
     - master
-  push:
-    branches:
-    - master
+  # push:
+  #   branches:
+  #   - master
   workflow_dispatch:
   schedule:
     - cron: '0 4 * * *'
