--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,12 @@
 name: Tests
 
 on:
-  pull_request:
-    branches:
-    - master
-  # push:
+  # pull_request:
   #   branches:
   #   - master
+  push:
+    branches:
+    - detox
   # workflow_dispatch:
   # schedule:
   #   - cron: '0 4 * * *'
