--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,14 +6,14 @@ on:
   #   - master
   push:
     branches:
-    - detox
+      - detox
   # workflow_dispatch:
   # schedule:
   #   - cron: '0 4 * * *'
 
 env:
-  PIP_DISABLE_PIP_VERSION_CHECK: '1'
-  PY_COLORS: '1'
+  PIP_DISABLE_PIP_VERSION_CHECK: "1"
+  PY_COLORS: "1"
 
 jobs:
   test:
@@ -22,39 +22,39 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-        - ubuntu-latest
-        - macos-latest
-        - windows-latest
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
         python-version:
-        - '3.9'
-        - '3.10'
-        - '3.11'
-        - '3.12'
-        - pypy-3.9
-        - pypy-3.10
+          - "3.9"
+          - "3.10"
+          - "3.11"
+          - "3.12"
+          - pypy-3.9
+          - pypy-3.10
         # TODO: bring this back later
         exclude:
-        - platform: windows-latest
-          python-version: 'pypy-3.10'
+          - platform: windows-latest
+            python-version: "pypy-3.10"
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5.1.1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Python build tools
-      run: python -m pip install hatch wheel
-    - name: Run tests
-      if: startsWith(matrix.python-version, 'pypy') != true
-      run: hatch test -i python=${{ matrix.python-version }}
-    - name: Run tests (pypy)
-      if: startsWith(matrix.python-version, 'pypy') == true
-      run: |
-        PYTHONENV=${{ matrix.python-version }}
-        PYTHONENV=${PYTHONENV//-} # replace all dashes
-        hatch test -i python=${PYTHONENV}
-    - name: Install Scipy prerequisites for Ubuntu
-      if: startsWith(matrix.platform, 'ubuntu')
-      run: sudo apt-get install libopenblas-dev
-    - name: Run tests with scipy
-      if: startsWith(matrix.platform, 'ubuntu') || startsWith(matrix.python-version, 'pypy') != true
-      run: hatch test -i python=${{ matrix.python-version }} -i feature=scipy
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5.1.1
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Python build tools
+        run: python -m pip install hatch wheel
+      - name: Run tests
+        if: startsWith(matrix.python-version, 'pypy') != true
+        run: hatch test -i python=${{ matrix.python-version }} -x feature=scipy
+      - name: Run tests (pypy-3.9)
+        if: ${{ matrix.python-version == pypy-3.9 }}
+        run: hatch test -i python=pypy3.9 -x feature=scipy
+      - name: Run tests (pypy-3.10)
+        if: ${{ matrix.python-version == pypy-3.10 }}
+        run: hatch test -i python=pypy3.10 -x feature=scipy
+      - name: Install Scipy prerequisites for Ubuntu
+        if: startsWith(matrix.platform, 'ubuntu')
+        run: sudo apt-get install libopenblas-dev
+      - name: Run tests with scipy
+        if: startsWith(matrix.platform, 'ubuntu') || startsWith(matrix.python-version, 'pypy') != true
+        run: hatch test -i python=${{ matrix.python-version }} -i feature=scipy
